# GStreamer_Learning

./: basic-tutorial-1  basic-tutorial-3  basic-tutorial-5  good.c  pipeline_debug10.dot  pipeline_debug2.dot  pipeline_debug3.dot  pipeline_debug4.dot  pipeline_debug5.dot  pipeline_debug6.dot  pipeline_debug8.dot  pipeline_debug9.dot
Basic-toturial/: basic-tutorial-3.c  basic-tutorial-5.c  dot2png.sh
Project_Media/: CMakeLists.txt  customdata.h  main.cpp  main.qml
Uav-Host/Demo1_slow/: UAV.cpp  host.cpp  test.cpp
Uav-Host/Demo2_fast/: UAV.cpp  host.cpp
